GNOME Bugzilla – Bug 101204
Reproducable crash on exit after regression
Last modified: 2004-12-22 21:47:04 UTC
Package: Gnumeric Severity: normal Version: 1.1.12 Synopsis: Reproducable crash on exit after regression Bugzilla-Product: Gnumeric Bugzilla-Component: General BugBuddy-GnomeVersion: 2.0 (2.0.6) Description: Description of Problem: Crash on exit. Steps to reproduce the problem: - Produce a sheet with the data set from http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=170323 (a regression data set with one y value missing) in A1:B4 - Select A1:A4 - Select Tools -> Statistical Analysis -> Regression - Click on 'Y Variable' and select B1:B4 - Click OK. A new sheet with regression summary output is created as expected. - File -> Exit -> Discard Actual Results: "Application "gnumeric" (process 8614) has crashed due to a fatal error. (Segmentation fault)" Expected Results: Clean exit How often does this happen? Completely reproducible Additional Information: 1.1.12-1 as packaged in Debian's project/experimental. Debugging Information: Backtrace was generated from '/usr/bin/gnumeric' Loading ~/.gdbinit (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...[New Thread 16384 (LWP 8573)] (no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... (no debugging symbols found)...(no debugging symbols found)... 0x40e7c269 in wait4 () from /lib/libc.so.6
+ Trace 31697
Thread 1 (Thread 16384 (LWP 8573))
------- Bug moved to this database by unknown@bugzilla.gnome.org 2002-12-14 09:06 ------- Reassigning to the default owner of the component, jody@gnome.org.
It looks like cb_cut_into_rows drops all rows. jody: victim of some 3d ref work?
Not really. The same problem exists in 1.0, that patch is simple to backport. Looks like a minor misunderstanding of what is a 3d ref, possibly a semantic change in the expr entry widget. Basicly patched in 1.0 and 1.1
The problem that prompted me to file this bug still exists in 1.0.x with the backported fix applied - I've filed a separate report for it: #101417.