http://bugzilla.gnome.org/show_bug.cgi?id=101204 It is ok for sheet B to

2002-12-16  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=101204
	* analysis-tools.c (cb_cut_into_cols) : It is ok for sheet B to be
	  NULL.
	(cb_cut_into_rows) : ditto.